--- a/src/components/pages/Builder/guides/ResizeGuideLine.css
+++ b/src/components/pages/Builder/guides/ResizeGuideLine.css
@@ -1,9 +1,10 @@
 /* 📁 src/components/pages/Builder/guides/ResizeGuideLine.css */
+
 .resize-guide-line {
   position: absolute;
   width: 100%;
   height: 2px;
-  background-color: rgb(0 128 255 / 70%);
-  z-index: 9999;
+  background-color: rgb(0 128 255);
   pointer-events: none;
+  z-index: 9999;
 }
