--- a/src/components/pages/Builder/floatingPagePanel/FloatingPagePanel.css
+++ b/src/components/pages/Builder/floatingPagePanel/FloatingPagePanel.css
@@ -71,3 +71,12 @@
 .block-toolbar button:hover {
   background: #e0e0e0;
 }
+
+button {
+  width: 32px;
+  height: 32px;
+  font-size: 18px;
+  text-align: center;
+  padding: 0;
+  margin: 4px;
+}
