--- a/src/components/Layouts/GridLayout.css
+++ b/src/components/Layouts/GridLayout.css
@@ -4,7 +4,7 @@
 
 .grid-layout {
   display: grid;
-  grid-template: "header header" auto "sidebar main" 1fr "footer footer" auto / 250px 1fr;
+  grid-template: "header header" auto  "footer footer" auto / 250px 1fr;
   min-height: 100vh;
   background-color: var(--primary-back-color);
 }
@@ -15,13 +15,6 @@
   background-color: var(--primary-color);
   color: var(--light-color);
   padding: 20px;
-}
-
-.grid-sidebar {
-  grid-area: sidebar;
-  background-color: var(--secondary-back-color);
-  padding: 20px;
-  border-right: 1px solid var(--border-color);
 }
 
 .grid-main {
@@ -46,12 +39,6 @@
     grid-template-areas:
       "header"
       "main"
-      "sidebar"
       "footer";
-  }
-
-  .grid-sidebar {
-    border-right: none;
-    border-top: 1px solid var(--border-color);
   }
 }
